WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196419
Web Inspector: JSC Sampling Profiler thread not getting subtracted in CPU Usage Timeline
https://bugs.webkit.org/show_bug.cgi?id=196419
Summary
Web Inspector: JSC Sampling Profiler thread not getting subtracted in CPU Usa...
Joseph Pecoraro
Reported
2019-03-29 19:58:57 PDT
JSC Sampling Profiler thread not getting subtracted in CPU Usage Timeline Oops, we forgot to call the platformSaveStateBeforeStarting function in the patch that was put up for review and landed...
Attachments
[PATCH] Proposed Fix
(1.41 KB, patch)
2019-03-29 20:01 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-29 19:59:18 PDT
<
rdar://problem/49444023
>
Joseph Pecoraro
Comment 2
2019-03-29 20:01:21 PDT
Created
attachment 366346
[details]
[PATCH] Proposed Fix
Devin Rousso
Comment 3
2019-03-29 20:09:06 PDT
Comment on
attachment 366346
[details]
[PATCH] Proposed Fix r=mews, oops :P
WebKit Commit Bot
Comment 4
2019-03-30 09:38:22 PDT
Comment on
attachment 366346
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 366346 Committed
r243679
: <
https://trac.webkit.org/changeset/243679
>
WebKit Commit Bot
Comment 5
2019-03-30 09:38:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug