Web Inspector: JSC Sampling Profiler thread not getting subtracted in CPU Usage Timeline https://bugs.webkit.org/show_bug.cgi?id=196419 <rdar://problem/49444023>

Reviewed by Devin Rousso.

* page/ResourceUsageThread.cpp:
(WebCore::ResourceUsageThread::addObserver):
We forgot to call the function that would setup platform state
allowing us to subtract out the sampling profiler thread.


Canonical link: https://commits.webkit.org/210695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243679 268f45cc-cd09-0410-ab3c-d52691b4dbfc